--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "url": "git://github.com/jimrhoskins/angular-parse.git"
   },
   "devDependencies": {
-      "grunt": "~0.4.1",
-      "grunt-contrib-coffee": "~0.7.0",
-      "grunt-contrib-watch": "~0.5.1",
-      "grunt-karma": "~0.4.4"
+    "grunt": "~0.4.1",
+    "grunt-contrib-coffee": "~0.7.0",
+    "grunt-contrib-uglify": "^0.6.0",
+    "grunt-contrib-watch": "~0.5.1",
+    "grunt-karma": "~0.4.4"
   }
 }
